--- a/platformio.ini
+++ b/platformio.ini
@@ -8,29 +8,65 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
+[platformio]
+extra_configs = extra_defines.ini
+
 [extra]
 build_flags =
 	;placeholder values, create a untracked extra_defines.ini file
 	;in the project root directory(same level as platformio.ini)
 	;so you can keep your custom setup defined by default on every pull
 	; -DDREAM_STEAM_DISABLED
-	 -DSINGLE_HX711_BOARD
+	; -DSINGLE_HX711_BOARD
 
-[env:blackpill_f411ce]
-platform = ststm32
+[env]
+check_tool = clangtidy, cppcheck
+check_skip_packages = yes
+check_flags =
+	clangtidy: --checks=-*,cert-*,clang-analyzer-* --fix
+	cppcheck: --enable=all --std=c++11 --suppress=*:*/.pio/* --suppress=*:*/lib/* --suppress=missingIncludeSystem --suppress=unmatchedSuppression --suppress=missingInclude --suppress=unusedFunction
+platform_packages = tool-cppcheck@1.260.0
+
+[env:all-pcb-stlink]
+extends = blackpill-core
+lib_deps =
+	${blackpill-core.lib_deps}
+	;adafruit/Adafruit MAX31855 library@1.3.0
+build_type = release
+build_flags =
+	${blackpill-core.build_flags}
+	-DSINGLE_BOARD
+
+[blackpill-core]
+framework = arduino
+platform = ststm32@15.6.0
 board = blackpill_f411ce
 extra_scripts =
 	pre:scripts/auto-version.py
 	pre:scripts/custom-src-dir.py
-framework = arduino
 custom_src_dir = src
 upload_protocol = stlink
 debug_tool = stlink
 monitor_speed = 115200
 lib_compat_mode = strict
 lib_deps =
-   	https://github.com/Zer0-bit/EasyNextionLibrary.git
+	;robtillaart/ADS1X15@0.3.7
+	;khoih-prog/FlashStorage_STM32@1.2.0
 	;powerbroker2/SerialTransfer@^3.1.3
+	;https://github.com/denyssene/SimpleKalmanFilter.git
+	https://github.com/Zer0-bit/EasyNextionLibrary.git#1272a6de37f8aec60bd28941e2d96dc5f5613d0b
+	;https://github.com/banoz/PSM.Library.git#feature/timer
+	;https://github.com/banoz/HX711.git#feature/continuous
+	;https://github.com/kc9zda/NCP5623.git
+	;https://github.com/Zer0-bit/Adafruit_VL53L0X.git
+	;https://github.com/JChristensen/movingAvg.git
+	;https://github.com/SomeLucky1/PCA9632.git
+build_flags =
+	-DPIO_FRAMEWORK_ARDUINO_ENABLE_CDC
+	-DUSBCON
+	-DLOG_LEVEL=3
+	; -DDEBUG_ENABLED
+	;if using a bigger boilr machine like Silvia set -DDREAM_STEAM_DISABLED in the extra_defines.ini
 	${extra.build_flags}
 	-DPIO_FRAMEWORK_ARDUINO_STANDARD_LIB
 	-DENABLE_HWSERIAL2
@@ -41,5 +77,13 @@ lib_deps =
 	-DSERIAL_TX_BUFFER_SIZE=256
 	-DSERIAL_RX_BUFFER_SIZE=256
 	-DBEAUTIFY_GRAPH
+	-O3
+	-mfloat-abi=hard
+	-mfpu=fpv4-sp-d16
+build_unflags =
+	-Os
+build_src_flags =
+	-Wdouble-promotion -Wall
+check_src_filters =
+	src
 
-	-DSINGLE_BOARD
