--- a/platformio.ini
+++ b/platformio.ini
@@ -8,24 +8,24 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[platformio]
-extra_configs = extra_defines.ini
+;[platformio]
+;extra_configs = extra_defines.ini
 
-[extra]
-build_flags =
+;[extra]
+;build_flags =
 	;placeholder values, create a untracked extra_defines.ini file
 	;in the project root directory(same level as platformio.ini)
 	;so you can keep your custom setup defined by default on every pull
 	; -DDREAM_STEAM_DISABLED
 	; -DSINGLE_HX711_BOARD
 
-[env]
-check_tool = clangtidy, cppcheck
-check_skip_packages = yes
-check_flags =
-	clangtidy: --checks=-*,cert-*,clang-analyzer-* --fix
-	cppcheck: --enable=all --std=c++11 --suppress=*:*/.pio/* --suppress=*:*/lib/* --suppress=missingIncludeSystem --suppress=unmatchedSuppression --suppress=missingInclude --suppress=unusedFunction
-platform_packages = tool-cppcheck@1.260.0
+;[env]
+;check_tool = clangtidy, cppcheck
+;check_skip_packages = yes
+;check_flags =
+;	clangtidy: --checks=-*,cert-*,clang-analyzer-* --fix
+;	cppcheck: --enable=all --std=c++11 --suppress=*:*/.pio/* --suppress=*:*/lib/* --suppress=missingIncludeSystem --suppress=unmatchedSuppression --suppress=missingInclude --suppress=unusedFunction
+;platform_packages = tool-cppcheck@1.260.0
 
 [env:all-pcb-stlink]
 extends = blackpill-core
@@ -46,6 +46,7 @@ extra_scripts =
 	pre:scripts/custom-src-dir.py
 custom_src_dir = src
 upload_protocol = stlink
+;upload_protocol = dfu
 debug_tool = stlink
 monitor_speed = 115200
 lib_compat_mode = strict
@@ -67,7 +68,7 @@ build_flags =
 	-DLOG_LEVEL=3
 	; -DDEBUG_ENABLED
 	;if using a bigger boilr machine like Silvia set -DDREAM_STEAM_DISABLED in the extra_defines.ini
-	${extra.build_flags}
+;	${extra.build_flags}
 	-DPIO_FRAMEWORK_ARDUINO_STANDARD_LIB
 	-DENABLE_HWSERIAL2
 	-DPIN_SERIAL2_RX=PA3
@@ -76,14 +77,14 @@ build_flags =
 	-DPIN_SERIAL1_TX=PA9
 	-DSERIAL_TX_BUFFER_SIZE=256
 	-DSERIAL_RX_BUFFER_SIZE=256
-	-DBEAUTIFY_GRAPH
-	-O3
-	-mfloat-abi=hard
-	-mfpu=fpv4-sp-d16
-build_unflags =
-	-Os
-build_src_flags =
-	-Wdouble-promotion -Wall
-check_src_filters =
-	src
+;	-DBEAUTIFY_GRAPH
+;	-O3
+;	-mfloat-abi=hard
+;	-mfpu=fpv4-sp-d16
+;build_unflags =
+;	-Os
+;build_src_flags =
+;	-Wdouble-promotion -Wall
+;check_src_filters =
+;	src
 
